--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/system": "^7.3.5",
-    "react": "^18.3",
+    "icons": "^1.0.0",
+    "react": "^18.3.1",
     "react-dom": "^18.3",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "thirdweb": "^5"
   },
