--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/system": "^7.3.5",
+    "framer-motion": "^12.23.24",
     "icons": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3",
