--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/system": "^7.3.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "icons": "^1.0.0",
+    "lucide-react": "^0.553.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3",
     "react-icons": "^5.5.0",
