--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/system": "^7.3.5",
     "framer-motion": "^12.23.24",
     "icons": "^1.0.0",
+    "lucide-react": "^0.553.0",
     "react": "^18.3.1",
     "react-dom": "^18.3",
     "react-icons": "^5.5.0",
